[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bdd_isaacsim_exec"
version = "0.0.1"
authors = [
    { name="Minh Nguyen", email="minh@mail.minhnh.com" }
]
description = """
Library for executing BDD models in the ISaacSim environment.
"""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
  'rdflib',
  'pyshacl',
]

[project.urls]
"Homepage" = "https://github.com/minhnh/bdd-isaacsim-exec"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
